INITIAL_WAIT_SECONDS test and pom updates cleanup
git-svn-id: http://hazelcast.googlecode.com/svn/trunk@1050 3f8e66b6-ca9d-11dd-a2b5-e5f827957e07